--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint lib/* public/app/* test/*",
-    "bundle": "webpack --config webpack.config/prod.js",
-    "start:dev": "node bin/server.js --port 8011",
+    "bundle": "webpack --config webpack.config.js --production",
+    "start:dev": "DEBUG=mylife:appmon:* node bin/server.js --port 8011 --dev",
     "start:docker": "DEBUG=mylife:appmon:* node bin/server.js --port 8080"
   },
   "repository": {
@@ -39,6 +39,8 @@
     "redux-actions": "^2.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.14.0",
     "webpack-dev-middleware": "^3.1.3"
   },
