--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint lib/* public/app/* test/*",
-    "bundle": "webpack --config webpack.config.js --production",
+    "bundle": "webpack --config webpack.config.js --mode=production",
     "start:dev": "DEBUG=mylife:appmon:* node bin/server.js --port 8011 --dev",
     "start:docker": "DEBUG=mylife:appmon:* node bin/server.js --port 8080"
   },
@@ -42,6 +42,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3"
   },
   "dependencies": {
