object config refactoring

--- a/conf/config.json
+++ b/conf/config.json
@@ -5,7 +5,11 @@
   "agent" : {
     "agentId" : "host-agent",
     "url" : "http://localhost:8899",
-    "builtins" : [ "base:process", "base:machine" ]
+    "objects" : [
+      { "name" : "base:process" },
+      { "name" : "base:machine" },
+      { "name" : "mongo:database", "plugin" : "mylife-appmon-plugin-mongo", "options" : { "url" : "mongodb://localhost:27017/merp-test" } }
+    ]
   },
   "viewer" : {
     "url" : "http://localhost:8899"
